# SimpleSolutions-tasks

./: README.md  pyproject.toml
task_1/: db_manager.py  employees_data.json  main.py  services.py
task_2/: services.py
task_3/: queries.py
task_4/: data.csv  services.py
